# rust-devai

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  rustfmt.toml
.devai/: config.toml
.devai/custom/agent/: is-md-clear.devai
.devai/custom/command-agent/: is-md-clear.devai  md-doc-lua.devai  proof-rust-comments.devai  rhai-doc.devai  rust-rhai-doc.devai
.devai/default/tests/: test-hbs.devai
.github/ISSUE_TEMPLATE/: blank.yaml  bug_report.yaml
_base/: config.toml
_base/agents/: proof-comments.devai  proof-comments.md
_base/doc/: rhai.md
_base/new-command-agent/: default.devai
_base/new-solo-agent/: default.devai
_init/: config.toml
_init/agents/: ask-devai.devai  proof-comments.devai  proof-read.devai  proof-rs-comments.devai  proof-rust-comments.devai
_init/agents/coder/: main.devai
_init/agents/craft/: code.devai  text.devai
_init/base/: config.toml
_init/base/doc/: README.md  lua-tips.md  lua.md
_init/doc/: README.md  lua-tips.md  lua.md  rhai.md
_init/new-command-agent/: default.devai
_init/new-solo-agent/: default.devai
_init/template/: pack.toml
_init/workspace/: config.toml
_init/workspace/doc/: README.md  lua.md
agents/: proof-comments.md
src/: ai.rs  error.rs  hub.rs  init.rs  main.rs
src/_test_support/: asserts.rs  base.rs  hub_capture.rs  loaders.rs  lua_test_support.rs  mod.rs  runners.rs
src/_tests/: tests_ai_run_command.rs  tests_ai_run_solo.rs  tests_ai_runner.rs  tests_ai_runner_command.rs  tests_ai_runner_solo.rs  tests_run_agent_llm.rs  tests_run_agent_script.rs  tests_run_command.rs  tests_run_solo.rs  tests_support_md.rs  tests_support_md_block_iter.rs  tests_support_md_blocks.rs
src/agent/: agent_common.rs  agent_config.rs  agent_doc.rs  agent_locator.rs  agent_options.rs  agent_ref.rs  agents.rs  mod.rs  prompt_part.rs
src/ai/: ai_command_config.rs  ai_impl.rs  ai_run_config.rs  ai_runner.rs  ai_solo_config.rs  client.rs  mod.rs  run_command.rs  run_item.rs  run_solo.rs  runner.rs  support.rs
src/cli/: args.rs  cmd_config.rs  mod.rs
src/cli/exec/: exec_new.rs  exec_new_solo.rs  exec_run.rs  exec_solo.rs  mod.rs  support.rs
src/dir_context/: aipack_paths.rs  base.rs  pack_dir.rs  path_consts.rs
src/exec/: exec_command.rs  exec_event.rs  exec_install.rs  exec_list.rs  exec_new.rs  exec_new_solo.rs  exec_pack.rs  exec_run.rs  exec_run_config.rs  exec_solo.rs  executor.rs  mod.rs  run_config.rs  support.rs
src/hub/: base.rs  event.rs  hub_base.rs  mod.rs
src/init/: assets.rs  embedded_files.rs  init_base.rs  init_devai.rs  init_wks.rs  migrate_devai.rs  mod.rs
src/pack/: error.rs  mod.rs  pack_identity.rs  pack_ref.rs  packer.rs
src/packer/: installer_impl.rs  mod.rs  pack_toml.rs  packer_impl.rs
src/pricing/: data.rs  mod.rs  pricer.rs
src/run/: client.rs  dir_context.rs  genai_client.rs  literals.rs  mod.rs  run_command.rs  run_input.rs  run_item.rs  run_options.rs  run_solo.rs  runtime.rs  support.rs
src/run/dir_context/: aipack_paths.rs  base.rs  devai_dir.rs  mod.rs  pack_dir.rs  path_consts.rs  paths.rs
src/run/runtime/: base.rs  literals.rs  mod.rs  runtime_context.rs
src/script/: aipack_custom.rs  devai_custom.rs  dynamic_support.rs  engine.rs  error_lua_support.rs  helpers.rs  mod.rs  rhai_eval.rs
src/script/lua_script/: devai_config.rs  helpers.rs  lua_engine.rs  lua_value_ext.rs  mod.rs  utils_aipack.rs  utils_cmd.rs  utils_code.rs  utils_devai.rs  utils_file.rs  utils_git.rs  utils_hbs.rs  utils_html.rs  utils_json.rs  utils_lua.rs  utils_md.rs  utils_path.rs  utils_rust.rs  utils_text.rs  utils_web.rs
src/script/rhai_modules/: mod.rs  rhai_file.rs  rhai_git.rs  rhai_md.rs  rhai_text.rs
src/script/rhai_script/: devai_action.rs  devai_custom.rs  dynamic_helpers.rs  dynamic_map.rs  engine.rs  helpers.rs  mod.rs  rhai_eval.rs
src/support/: args.rs  as_strs_ext.rs  common.rs  cow_lines.rs  cred.rs  dir_context.rs  files.rs  hbs.rs  html.rs  jsons.rs  md.rs  mod.rs  paths.rs  run_options.rs  str_ext.rs  strings.rs  text.rs  tomls.rs  value_ext.rs  zip.rs
src/support/code/: mod.rs  rust.rs
src/support/md/: extract_blocks.rs  in_block_state.rs  md_block_iter.rs  md_blocks.rs  md_meta_extractor.rs  md_section_iter.rs  md_section_split.rs  mod.rs  outer_block.rs  sections_reader.rs
src/support/text/: line_block_iter.rs  mod.rs  (+1 more)
src/tmpl/: mod.rs
src/tui/: base.rs  in_reader.rs  mod.rs  tui_app.rs  tui_base.rs  tui_elem.rs
src/types/: file_meta.rs  file_record.rs  file_ref.rs  md_block.rs  md_heading.rs  md_section.rs  mod.rs
tests-data/.aipack-base/: config.toml
tests-data/agent-doc/: agent-all-sections.aip  agent-demo.aip  agent-demo.md  agent-legacy-config.aip
tests-data/agents/: agent-all-sections.md  agent-before-all.md  agent-caller.devai  agent-demo.md  agent-hello.md  agent-items.md  agent-on-file.md  agent-simple.md  agent-web-get.devai
tests-data/config/: config-current-with-aliases.toml  config-v_0_5_09.toml
tests-data/sandbox-01/: agent-ctx-reflect.devai  file-01.txt  file-02.txt
tests-data/solo/: simple.md  simple.md.devai
(+86 files in other folders)
