[package]
name = "devai"
version = "0.1.1-WIP"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
description = "Command Agent runner to accelerate production coding with genai."
categories = ["command-line-utilities"]
keywords = ["generative-ai","openai","genai","ai-coding"]
homepage = "https://github.com/jeremychone/rust-devai"
repository = "https://github.com/jeremychone/rust-devai"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- AI
genai = "0.1.11"
# -- Json & Data Files
serde = { version = "1", features = ["derive"] }
serde_json = "1"
value-ext = "0.1.1"
toml = "0.8"
# -- Parsers
# Needs unofficial to make it work with the latest html5ever
markup5ever_rcdom = "=0.5.0-unofficial"
html5ever = "0.29"
logos = "0.14"
# -- Template & Scripting
rhai = {version = "1.20", features = ["sync"]}
handlebars = "6"
# -- Cli
clap =  {version = "4.5.17", features = ["cargo", "derive"]}
# -- Files
simple-fs = { version = "0.2.4" }
# -- Web
reqwest = {version = "0.12", features = ["json"]}
# -- Others
derive_more = {version = "1.0.0", features = ["from"] }
strum = { version = "0.26", features = ["derive"] }
keyring = {version = "3", features = ["apple-native"]}
html-escape = "0.2"
strsim = "0.11"
aho-corasick = "1.1.3"
flume = "0.11.1"


