[package]
name = "devai"
version = "0.5.10-WIP"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
description = "Command Agent runner to accelerate production coding with genai."
categories = ["command-line-utilities"]
keywords = ["generative-ai","openai","genai","ai-coding"]
homepage = "https://devai.run"
repository = "https://github.com/jeremychone/rust-devai"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
flume = "0.11.1"
# -- AI
genai = "0.1.21"
# -- Json & Data Files
serde = { version = "1", features = ["derive"] }
serde_json = "1"
value-ext = "0.1.1"
toml = "0.8"
# -- Parsers
# Needs unofficial to make it work with the latest html5ever
markup5ever_rcdom = "=0.5.0-unofficial"
html5ever = "0.29"
logos = "0.15"
aho-corasick = "1.1.3"
# -- Template & Scripting
mlua = { version = "0.10.1", features = ["lua54", "vendored", "async", "send", "serialize"] }
handlebars = "6"
# -- Cli
clap =  {version = "4.5.17", features = ["cargo", "derive"]}
crossterm = { version = "0.28.1", features = ["event-stream"] }
# -- Files
simple-fs = { version = "0.4.0" }
home = "0.5.11"
# -- Web
reqwest = {version = "0.12", features = ["json"]}
# -- Others
derive_more = {version = "2.0.0", features = ["from","display","debug"] }
strum = { version = "0.27", features = ["derive"] }
keyring = {version = "3", features = ["apple-native"]}
html-escape = "0.2"
strsim = "0.11"
paste = "1.0"
lazy-regex = "3.4.1"





